Avoid underline when hovering icons in test result overview
The text decoration doesn't look good for these links as they're circle
icons.

--- a/assets/stylesheets/overview.scss
+++ b/assets/stylesheets/overview.scss
@@ -6,7 +6,7 @@
             content: "•";
         }
     }
-    a.fa {
+    a.fa, span > a {
         text-decoration: none;
     }
 }
